--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Clinica Ginco-obstetrica Freyja - Departamento de Ginecolgia</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="../css/main.css">
 </head>
 <body>
     <!-- botenera -->
@@ -43,7 +43,30 @@
             <h1>Contacto</h1>
         </header>
         <main>
-
+            <section class="contactHeading">
+                <h2 class="text_medium contactLegend">¿En que podemos ayudarte?</h2>
+            </section>
+            <!-- form start -->
+            <section class="contactInfo">
+                <form action="envio.php" class="contactForm">
+                    <label for="name"> Nombre:</label>
+                    <input type="text" id="name"><br>
+                    <label for="email"> Email:</label>
+                    <input type="email" id="email" placeholder="mail@gmail.com"> <br>
+                    <label for="phone"> Telefono:</label>
+                    <input type="text" id="phone"><br>
+                    <label for="mensaje"> Su mensaje:</label>
+                    <textarea name="mensaje" id="mensaje" cols="30" rows="10"></textarea> <br>
+                    <input type="submit" value="Cancelar" class="contactInput">
+                    <input type="reset" value="Aceptar" class="contactInput">
+                </form>
+                <!-- incia maps -->
+                <div class="contactMap">
+                    <iframe  src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d1829.693436393853!2d-68.79299047716847!3d-32.90982756270164!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses!2sar!4v1677253506177!5m2!1ses!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                </div>
+            </section>
+            <!-- finaliza maps -->
+            <p class="text_small contactDetail">Podras encontrarnos en Talcahuano Center, 3er piso Of 4 o contactarnos vial telefonica al 2613725083 o 4281857</p>
         </main>
     
         <footer class="">
