--- a/pages/estetica.html
+++ b/pages/estetica.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Clinica Ginco-obstetrica Freyja - Departamento de Estetica</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="../css/main.css">
 </head>
 <body>
     <!-- botenera -->
@@ -53,28 +53,28 @@
                     </div>
                     <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img src="../img/acido_hialuronico2 1.jpg" class="d-block w-100" alt="tratamiento acido hialuronico">
+                        <img src="../img/acidohialuronico.webp" class="d-block w-100" alt="tratamiento acido hialuronico">
                         <div class="carousel-caption d-none d-md-block">
                         <h3>Acido hialuronico</h3>
                         <p>Tratamiento con acido hialuronico para rellenos $45000</p>
                         </div>
                     </div>
                     <div class="carousel-item">
-                        <img src="../img/dermapen 1.png" class="d-block w-100" alt="tratamiento dermapen">
+                        <img src="../img/dermapen.webp" class="d-block w-100" alt="tratamiento dermapen">
                         <div class="carousel-caption d-none d-md-block">
                         <h3>Dermapen</h3>
                         <p>$7500</p>
                         </div>
                     </div>
                     <div class="carousel-item">
-                        <img src="../img/fosfatidilcolina 1.png" class="d-block w-100" alt="tratamiento fosfatidilcolina">
+                        <img src="../img/fostatidilcolina.webp" class="d-block w-100" alt="tratamiento fosfatidilcolina">
                         <div class="carousel-caption d-none d-md-block">
                         <h3>Fosftifilcolina</h3>
                         <p>Para adiposidad localizada $8000</p>
                         </div>
                     </div>
                     <div class="carousel-item">
-                        <img src="../img/peeling-quimico 1.jpg" class="d-block w-100" alt="tratamiento peeling quimico">
+                        <img src="../img/peelingquimico.webp" class="d-block w-100" alt="tratamiento peeling quimico">
                         <div class="carousel-caption d-none d-md-block">
                         <h3>Peeling quimico</h3>
                         <p>Mas punta de diamante $4000</p>
