improving navbarand footer

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <!-- botenera -->
-    <div  class="container d-flex flex-column flex-md-row">
+    <div  class="container mx-0 d-flex flex-column flex-md-row">
         <nav class="navbar navbar-expand-sm d-flex flex-md-column">
             <div class="container-fluid navbar-nav w-100 d-flex flex-md-column text-center text-md-end">
             <a class="navbar-brand" href="">
