--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -42,7 +42,7 @@
         <header>
             <h1>Contacto</h1>
         </header>
-        <main>
+        <main class="contactSettings">
             <section class="contactHeading">
                 <h2 class="text_medium contactLegend">¿En que podemos ayudarte?</h2>
             </section>
