--- a/pages/obstetricia.html
+++ b/pages/obstetricia.html
@@ -44,8 +44,8 @@
         </header>
         <main>
             <section class="obsMain">
-                <img src="../img/DocAlma.webp" alt="foto obstetra Javier Alma">
-                <p>Bienvenido al Departamento de Obstetricia de Clínica Freyja, donde nuestro equipo de profesionales de la salud experimentados se dedica a brindar una atención excepcional a las futuras madres y sus bebés. Nuestras instalaciones de última generación, tecnología avanzada y enfoque personalizado de atención aseguran que cada embarazo se cumpla con el más alto nivel de atención y experiencia. Estamos comprometidos a apoyarla a usted y a su familia en cada etapa de su embarazo, desde la preconcepción hasta la atención posparto.</p>
+                <img src="../img/DocAlma.webp" alt="foto obstetra Javier Alma" class="obsImg">
+                <p class="obsIntro">Bienvenido al Departamento de Obstetricia de Clínica Freyja, donde nuestro equipo de profesionales de la salud experimentados se dedica a brindar una atención excepcional a las futuras madres y sus bebés. Nuestras instalaciones de última generación, tecnología avanzada y enfoque personalizado de atención aseguran que cada embarazo se cumpla con el más alto nivel de atención y experiencia. Estamos comprometidos a apoyarla a usted y a su familia en cada etapa de su embarazo, desde la preconcepción hasta la atención posparto.</p>
                 <div>
                     <ul>
                         <li>Obstetricia de bajo riesgo</li>
