fixing width and overflow

--- a/pages/ginecologia.html
+++ b/pages/ginecologia.html
@@ -43,7 +43,7 @@
             <h1>Ginecologia</h1>
         </header>
         <main>
-            <section class="gynInfo">
+            <section class="gynInfo mobilText">
                 <p>En nuestro Departamento de Ginecología brindamos atención integral para mujeres de todas las edades.
                 Entendemos que las mujeres tienen necesidades de atención médica únicas por lo que estamos comprometidos a brindar atención personalizada que aborde sus inquietudes específicas. Ya sea que busque atención ginecológica de rutina, servicio de planificación familiar o atención especializada para una afección ginecológica. Estamos aquí para brindarle la mejor atención posible.
                 Nos esforzamos por brindarles a nuestros pacientes la información y los recursos que necesitan para tomar decisiones informadas sobre su salud y bienestar. Nuestro equipo de expertos está siempre disponible para responder a sus preguntas y proporcionar orientación según sea necesario.</p>
