--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
             <h1>Clinica Freyja</h1>
         </header>
         <main>
-            <article> 
-                <p>Bienvenido a nuestra clínica de obstetricia y ginecología, donde nos esforzamos por brindar atención de la más alta calidad. 
+            <article class="infoMain"> 
+                <p class="mobilText">Bienvenido a nuestra clínica de obstetricia y ginecología, donde nos esforzamos por brindar atención de la más alta calidad. 
                 En nuestra clínica, entendemos que las mujeres tienen necesidades de atención médica únicas y estamos aquí para brindar atención personalizada que aborde sus inquietudes específicas. Ya sea que busque atención ginecológica de rutina, servicios de planificación familiar o atención prenatal y posparto, estamos comprometidos a brindarle la mejor atención posible.</p>
                 <img src="./img/uterus.webp" alt="doc_graffic">
                 <p> Nuestras instalaciones de última generación están diseñadas para crear un ambiente cómodo y acogedor, y nuestro equipo de profesionales está capacitado para brindarle el más alto nivel de atención. 
