--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -47,8 +47,8 @@
                 <h2 class="text_medium contactLegend">¿En que podemos ayudarte?</h2>
             </section>
             <!-- form start -->
-            <section class="contactInfo">
-                <form action="envio.php" class="contactForm">
+            <section class="contactInfo infoMain">
+                <form action="envio.php" class="contactForm forMobil">
                     <label for="name"> Nombre:</label>
                     <input type="text" id="name"><br>
                     <label for="email"> Email:</label>
