--- a/pages/estetica.html
+++ b/pages/estetica.html
@@ -96,6 +96,64 @@
             Nuestra gama de servicios incluye todo, desde tratamientos para el cuidado de la piel y faciales hasta contorno corporal y procedimientos cosméticos. Nuestro equipo de expertos trabajará con usted para crear un plan de tratamiento personalizado que aborde sus necesidades e inquietudes únicas.
             Entendemos que la decisión de someterse a un tratamiento estético puede ser personal y estamos comprometidos a brindarle el más alto nivel de cuidado y atención. Nuestro objetivo es ayudarte a alcanzar tus metas de belleza de una manera segura y efectiva, con resultados que superen tus expectativas.</p>    
         </section>
+        <section class="cardsMobil">
+            <div class="card mb-3 gynService" style="max-width: 400px;">
+                <div class="row g-0">
+                  <div class="col-md-4">
+                    <img src="../img/acidohialuronico.webp" class="img-fluid rounded-start" alt="Colpo exam">
+                  </div>
+                  <div class="col-md-8">
+                    <div class="card-body">
+                      <h2 class="card-title">Acido hialuronico</h2>
+                      <p class="card-text">Tratamiento con acido hialuronico para rellenos $45000</p>
+                      <a href="#" class="btn btn-primary">Solicitar turno</a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="card mb-3 gynService" style="max-width: 400px;">
+                <div class="row g-0">
+                  <div class="col-md-4">
+                    <img src="../img/dermapen.webp" class="img-fluid rounded-start" alt="Pap exam">
+                  </div>
+                  <div class="col-md-8">
+                    <div class="card-body">
+                      <h2 class="card-title">Dermapen</h2>
+                      <p class="card-text">$7500</p>
+                      <a href="#" class="btn btn-primary">Solicitar turno</a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="card mb-3 gynService" style="max-width: 400px;">
+                <div class="row g-0">
+                  <div class="col-md-4">
+                    <img src="../img/fostatidilcolina.webp" class="img-fluid rounded-start" alt="sex education">
+                  </div>
+                  <div class="col-md-8">
+                    <div class="card-body">
+                      <h2 class="card-title">Fosfatidilcolina</h2>
+                      <p class="card-text">Para adiposidad localizada $8000</p>
+                      <a href="#" class="btn btn-primary">Solicitar turno</a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="card mb-3 gynService" style="max-width: 400px;">
+                <div class="row g-0">
+                  <div class="col-md-4">
+                    <img src="../img/peelingquimico.webp" class="img-fluid rounded-start" alt="pinkbow">
+                  </div>
+                  <div class="col-md-8">
+                    <div class="card-body">
+                      <h2 class="card-title">Peeling quimico</h2>
+                      <p class="card-text">Mas punta de diamante $4000</p>
+                      <a href="#" class="btn btn-primary">Solicitar turno</a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+        </section>
     </main> 
     <footer class="one">
         <a href="https://www.facebook.com" target="_blank"><img
