--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Clinica Ginco-obstetrica Freyja</title>
+    <meta name="description" content="En nuestra clinica encontraras un espacio donde buscamos te sientas tanto cuidad como acompanada">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/main.css">
 </head>
@@ -40,14 +41,14 @@
         <!-- fin nav, comienzo contenido principal -->
         <div>
         <header>
-            <h1>Clinica Freyja</h1>
+            <h1 class="mainTitle">Clinica Freyja</h1>
         </header>
         <main>
             <article class="infoMain"> 
                 <p class="mobilText">Bienvenido a nuestra clínica de obstetricia y ginecología, donde nos esforzamos por brindar atención de la más alta calidad. 
                 En nuestra clínica, entendemos que las mujeres tienen necesidades de atención médica únicas y estamos aquí para brindar atención personalizada que aborde sus inquietudes específicas. Ya sea que busque atención ginecológica de rutina, servicios de planificación familiar o atención prenatal y posparto, estamos comprometidos a brindarle la mejor atención posible.</p>
                 <img src="./img/uterus.webp" alt="doc_graffic">
-                <p> Nuestras instalaciones de última generación están diseñadas para crear un ambiente cómodo y acogedor, y nuestro equipo de profesionales está capacitado para brindarle el más alto nivel de atención. 
+                <p class="mobilText"> Nuestras instalaciones de última generación están diseñadas para crear un ambiente cómodo y acogedor, y nuestro equipo de profesionales está capacitado para brindarle el más alto nivel de atención. 
                 Gracias por considerar nuestra clínica para sus necesidades de atención médica. Esperamos poder servirle y ayudarlo a lograr una salud y un bienestar óptimos.</p>
                 <img src="./img/pregnancy.webp" alt="pregnancy_check">
             </article>
