--- a/pages/ginecologia.html
+++ b/pages/ginecologia.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Clinica Ginco-obstetrica Freyja - Departamento de Ginecolgia</title>
+    <meta name="description" content="En nuestro departamento de ginecologia nos encontramos a tu disposicion para acompanarte tanto en estudios de rutina como tratamientos">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/main.css">
 </head>
@@ -40,11 +41,11 @@
         <!-- fin nav, comienzo contenido principal -->
         <div>
         <header>
-            <h1>Ginecologia</h1>
+            <h1 class="mainTitle">Ginecologia</h1>
         </header>
         <main>
-            <section class="gynInfo mobilText">
-                <p>En nuestro Departamento de Ginecología brindamos atención integral para mujeres de todas las edades.
+            <section class="gynInfo">
+                <p class="mobilText">En nuestro Departamento de Ginecología brindamos atención integral para mujeres de todas las edades.
                 Entendemos que las mujeres tienen necesidades de atención médica únicas por lo que estamos comprometidos a brindar atención personalizada que aborde sus inquietudes específicas. Ya sea que busque atención ginecológica de rutina, servicio de planificación familiar o atención especializada para una afección ginecológica. Estamos aquí para brindarle la mejor atención posible.
                 Nos esforzamos por brindarles a nuestros pacientes la información y los recursos que necesitan para tomar decisiones informadas sobre su salud y bienestar. Nuestro equipo de expertos está siempre disponible para responder a sus preguntas y proporcionar orientación según sea necesario.</p>
             </section>
