--- a/index.html
+++ b/index.html
@@ -4,8 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="./img/Lvn21sFq.ico" type="image/x-icon">
     <title> Clinica Ginco-obstetrica Freyja</title>
     <meta name="description" content="En nuestra clinica encontraras un espacio donde buscamos te sientas tanto cuidad como acompanada">
+    <meta name="author" content="Nicolas Amoros">
+    <meta name="robots" content="index,follow">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/main.css">
 </head>
@@ -14,7 +17,7 @@
     <div  class="container mx-0 d-flex flex-column flex-md-row">
         <nav class="navbar navbar-expand-sm  w-100 d-flex flex-md-column one">
             <div class="container-fluid navbar-nav d-flex flex-md-column text-center text-md-end">
-            <a class="navbar-brand" href="">
+            <a class="navbar-brand" href="./index.html">
                 <img src="./img/simbolo freyja.png" alt="simbolo Clinica" width="50px">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -47,10 +50,10 @@
             <article class="infoMain"> 
                 <p class="mobilText">Bienvenido a nuestra clínica de obstetricia y ginecología, donde nos esforzamos por brindar atención de la más alta calidad. 
                 En nuestra clínica, entendemos que las mujeres tienen necesidades de atención médica únicas y estamos aquí para brindar atención personalizada que aborde sus inquietudes específicas. Ya sea que busque atención ginecológica de rutina, servicios de planificación familiar o atención prenatal y posparto, estamos comprometidos a brindarle la mejor atención posible.</p>
-                <img src="./img/uterus.webp" alt="doc_graffic">
+                <img src="./img/uterus.webp" alt="doctor representacion utero">
                 <p class="mobilText"> Nuestras instalaciones de última generación están diseñadas para crear un ambiente cómodo y acogedor, y nuestro equipo de profesionales está capacitado para brindarle el más alto nivel de atención. 
                 Gracias por considerar nuestra clínica para sus necesidades de atención médica. Esperamos poder servirle y ayudarlo a lograr una salud y un bienestar óptimos.</p>
-                <img src="./img/pregnancy.webp" alt="pregnancy_check">
+                <img src="./img/pregnancy.webp" alt="control embarazo">
             </article>
         </main>
         <!-- comienzo footer -->
