display fix, added SEO

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     <!-- botenera -->
-    <div  class="container mx-0 d-flex flex-column flex-md-row">
+    <div  class=" mx-0 d-flex flex-column flex-md-row">
         <nav class="navbar navbar-expand-sm  w-100 d-flex flex-md-column one">
             <div class="container-fluid navbar-nav d-flex flex-md-column text-center text-md-end">
             <a class="navbar-brand" href="./index.html">
