--- a/pages/ginecologia.html
+++ b/pages/ginecologia.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="../img/Lvn21sFq.ico" type="image/x-icon">
     <title> Clinica Ginco-obstetrica Freyja - Departamento de Ginecolgia</title>
     <meta name="description" content="En nuestro departamento de ginecologia nos encontramos a tu disposicion para acompanarte tanto en estudios de rutina como tratamientos">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
@@ -11,7 +12,7 @@
 </head>
 <body>
     <!-- botenera -->
-    <div  class="container mx-0 d-flex flex-column flex-md-row">
+    <div  class="cmx-0 d-flex flex-column flex-md-row">
         <nav class="navbar navbar-expand-sm d-flex flex-md-column">
             <div class="container-fluid navbar-nav w-100 d-flex flex-md-column text-center text-md-end">
             <a class="navbar-brand" href="../index.html">
