fix mobile breakpoint

--- a/pages/estetica.html
+++ b/pages/estetica.html
@@ -42,7 +42,7 @@
         <!-- fin nav, comienzo contenido principal -->
         <div>
         <header>
-            <h1 class="mainTitle">Estetica</h1>
+            <h1 class="mainTitle mainTitlePages">Estetica</h1>
         </header>
         <main>
         <section class="aesCarous caroMobil">
@@ -99,7 +99,7 @@
             Entendemos que la decisión de someterse a un tratamiento estético puede ser personal y estamos comprometidos a brindarle el más alto nivel de cuidado y atención. Nuestro objetivo es ayudarte a alcanzar tus metas de belleza de una manera segura y efectiva, con resultados que superen tus expectativas.</p>    
         </section>
         <section class="cardsMobil">
-            <div class="card mb-3 gynService" style="max-width: 400px;">
+            <article class="card mb-3 gynService glasStyle" style="max-width: 400px;">
                 <div class="row g-0">
                   <div class="col-md-4">
                     <img src="../img/acidohialuronico.webp" class="img-fluid rounded-start" alt="tratamiento acido hialuronico">
@@ -108,12 +108,12 @@
                     <div class="card-body">
                       <h3 class="card-title">Acido hialuronico</h3>
                       <p class="card-text">Tratamiento con acido hialuronico para rellenos $45000</p>
-                      <a href="#" class="btn btn-primary">Solicitar turno</a>
+                      <a href="#" class="btn btn-outline-secondary">Solicitar turno</a>
                     </div>
                   </div>
                 </div>
-              </div>
-              <div class="card mb-3 gynService" style="max-width: 400px;">
+              </article>
+              <article class="card mb-3 gynService glasStyle" style="max-width: 400px;">
                 <div class="row g-0">
                   <div class="col-md-4">
                     <img src="../img/dermapen.webp" class="img-fluid rounded-start" alt="tratamiento dermapen">
@@ -122,12 +122,12 @@
                     <div class="card-body">
                       <h3 class="card-title">Dermapen</h3>
                       <p class="card-text">$7500</p>
-                      <a href="#" class="btn btn-primary">Solicitar turno</a>
+                      <a href="#" class="btn btn-outline-secondary">Solicitar turno</a>
                     </div>
                   </div>
                 </div>
-              </div>
-              <div class="card mb-3 gynService" style="max-width: 400px;">
+              </article>
+              <article class="card mb-3 gynService glasStyle" style="max-width: 400px;">
                 <div class="row g-0">
                   <div class="col-md-4">
                     <img src="../img/fostatidilcolina.webp" class="img-fluid rounded-start" alt="tratamiento fosfatidilcolina">
@@ -136,12 +136,12 @@
                     <div class="card-body">
                       <h3 class="card-title">Fosfatidilcolina</h3>
                       <p class="card-text">Para adiposidad localizada $8000</p>
-                      <a href="#" class="btn btn-primary">Solicitar turno</a>
+                      <a href="#" class="btn btn-outline-secondary">Solicitar turno</a>
                     </div>
                   </div>
                 </div>
-              </div>
-              <div class="card mb-3 gynService" style="max-width: 400px;">
+              </article>
+              <article class="card mb-3 gynService glasStyle" style="max-width: 400px;">
                 <div class="row g-0">
                   <div class="col-md-4">
                     <img src="../img/peelingquimico.webp" class="img-fluid rounded-start" alt="tratamiento peeling">
@@ -150,11 +150,11 @@
                     <div class="card-body">
                       <h3 class="card-title">Peeling quimico</h3>
                       <p class="card-text">Mas punta de diamante $4000</p>
-                      <a href="#" class="btn btn-primary">Solicitar turno</a>
+                      <a href="#" class="btn btn-outline-secondary">Solicitar turno</a>
                     </div>
                   </div>
                 </div>
-              </div>
+              </article>
         </section>
     </main> 
     <!-- comienzo footer -->
