--- a/pages/obstetricia.html
+++ b/pages/obstetricia.html
@@ -42,13 +42,13 @@
         <!-- fin nav, comienzo contenido principal -->
         <div>
         <header>
-            <h1 class="mainTitle">Obstetricia</h1>
+            <h1 class="mainTitle mainTitlePages">Obstetricia</h1>
         </header>
         <main>
             <section class="obsMain">
                 <img src="../img/DocAlma.webp" alt="foto obstetra Javier Alma" class="obsImg">
                 <p class="obsIntro mobilText">Nuestro equipo de profesionales de la salud experimentados se dedica a brindar una atención excepcional a las futuras madres y sus bebés. Nuestras instalaciones de última generación, tecnología avanzada y enfoque personalizado de atención aseguran que cada embarazo se cumpla con el más alto nivel de atención y experiencia. Estamos comprometidos a apoyarla a usted y a su familia en cada etapa de su embarazo, desde la preconcepción hasta la atención posparto.</p>
-                <div class="list-group">
+                <div class="list-group glasStyle">
                     <a class="list-group-item list-group-item-action">
                       <div class="d-flex w-100 justify-content-between">
                         <h2 class="mb-1">Obstetricia de bajo y alto riesgo</h2>
