--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -25,10 +25,10 @@
             <div class="collapse navbar-collapse w-100" id="navbarSupportedContent">
                 <ul class="navbar-nav w-100 d-flex flex-md-column text-center text-md-end">
                     <li class="nav-item">
-                        <a class="nav-link" href="../pages/estetica.html">Estetica</a>
+                        <a class="nav-link" href="../pages/estetica.html">Estética</a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link" href="../pages/ginecologia.html">Ginecologia</a>
+                        <a class="nav-link" href="../pages/ginecologia.html">Ginecología</a>
                       </li>
                       <li class="nav-item">
                         <a class="nav-link" href="../pages/obstetricia.html">Obstetricia</a>
@@ -47,7 +47,7 @@
         </header>
         <main class="contactSettings">
             <section class="contactHeading">
-                <h2 class="text_medium contactLegend">¿En que podemos ayudarte?</h2>
+                <h2 class="text_medium contactLegend">¿En qué podemos ayudarte?</h2>
             </section>
             <!-- form start -->
             <section class="contactInfo infoMain">
@@ -55,11 +55,11 @@
                     <label for="name"> Nombre:</label>
                     <input type="text" id="name"><br>
                     <label for="email"> Email:</label>
-                    <input type="email" id="email" placeholder="mail@gmail.com"> <br>
+                    <input type="email" id="email" placeholder="mail@gmail.com"><br>
                     <label for="phone"> Telefono:</label>
                     <input type="text" id="phone"><br>
                     <label for="mensaje"> Su mensaje:</label>
-                    <textarea name="mensaje" id="mensaje" cols="50" rows="10"></textarea> <br>
+                    <textarea name="mensaje" id="mensaje" cols="50" rows="10"></textarea><br>
                     <input type="submit" value="Cancelar" class="contactInput">
                     <input type="reset" value="Aceptar" class="contactInput">
                 </form>
@@ -69,7 +69,7 @@
                 </div>
             </section>
             <!-- finaliza maps -->
-            <p class="contactDetail four">Podras encontrarnos en Talcahuano Center, 3er piso Of 4 o contactarnos vial telefonica al 2613725083 o 4281857</p>
+            <p class="contactDetail four">Podrás encontrarnos en Talcahuano Center, 3er piso Of 4 o contactarnos vía telefónica al 2613725083 o 4281857</p>
         </main>
         <!-- inicio footer -->
         <footer class="one">
