--- a/pages/ginecologia.html
+++ b/pages/ginecologia.html
@@ -24,10 +24,10 @@
             <div class="collapse navbar-collapse w-100" id="navbarSupportedContent">
                 <ul class="navbar-nav w-100 d-flex flex-md-column text-center text-md-end">
                     <li class="nav-item">
-                        <a class="nav-link" href="../pages/estetica.html">Estetica</a>
+                        <a class="nav-link" href="../pages/estetica.html">Estética</a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link active" href="../pages/ginecologia.html">Ginecologia</a>
+                        <a class="nav-link active" href="../pages/ginecologia.html">Ginecología</a>
                       </li>
                       <li class="nav-item">
                         <a class="nav-link" href="../pages/obstetricia.html">Obstetricia</a>
@@ -42,7 +42,7 @@
         <!-- fin nav, comienzo contenido principal -->
         <div>
         <header>
-            <h1 class="mainTitle mainTitlePages">Ginecologia</h1>
+            <h1 class="mainTitle mainTitlePages">Ginecología</h1>
         </header>
         <main>
             <section class="gynInfo">
@@ -58,9 +58,9 @@
                       </div>
                       <div class="col-md-8">
                         <div class="card-body">
-                          <h2 class="card-title">Colposcopia</h2>
-                          <p class="card-text">Examen de rutina que debe realizarce cada un ano para prevenir cancer de cuello de utero</p>
-                          <a href="#" class="btn btn-outline-secondary">Solicitar turno</a>
+                          <h2 class="card-title">Colposcopía</h2>
+                          <p class="card-text">Examen de rutina que debe realizarce cada un año para prevenir el cáncer de cuello de útero</p>
+                          <a href="../pages/404.html" class="btn btn-outline-secondary">Solicitar turno</a>
                         </div>
                       </div>
                     </div>
@@ -72,9 +72,9 @@
                       </div>
                       <div class="col-md-8">
                         <div class="card-body">
-                          <h2 class="card-title">Papanicolau</h2>
-                          <p class="card-text">Examen de rutina que debe realizarce cada un ano para prevenir cancer de cuello de utero</p>
-                          <a href="#" class="btn btn-outline-secondary">Solicitar turno</a>
+                          <h2 class="card-title">Papanicolaou</h2>
+                          <p class="card-text">Test de rutina anual que debe realizarse para prevenir el cáncer de cuello de útero</p>
+                          <a href="../pages/404.html" class="btn btn-outline-secondary">Solicitar turno</a>
                         </div>
                       </div>
                     </div>
@@ -86,9 +86,9 @@
                       </div>
                       <div class="col-md-8">
                         <div class="card-body">
-                          <h2 class="card-title">Consejeria de salud sexual y reproductiva</h2>
-                          <p class="card-text">Examen de rutina que debe realizarce cada un ano para prevenir cancer de cuello de utero</p>
-                          <a href="#" class="btn btn-outline-secondary">Solicitar turno</a>
+                          <h2 class="card-title">Consejería en salud sexual y reproductiva</h2>
+                          <p class="card-text">Brindamos asesoramiento personalizado para que pueda tomar desiciones atonomas sobre su sexualidad</p>
+                          <a href="../pages/404.html" class="btn btn-outline-secondary">Solicitar turno</a>
                         </div>
                       </div>
                     </div>
@@ -100,8 +100,8 @@
                       </div>
                       <div class="col-md-8">
                         <div class="card-body">
-                          <h2 class="card-title">Oncolginecologia</h2>
-                          <p class="card-text">Examen de rutina que debe realizarce cada un ano para prevenir cancer de cuello de utero</p>
+                          <h2 class="card-title">Onco-ginecología</h2>
+                          <p class="card-text">Diagnóstico, tratamiento y asesoramiento genético</p>
                           <a href="../pages/404.html" class="btn btn-outline-secondary">Solicitar turno</a>
                         </div>
                       </div>
