--- a/index.html
+++ b/index.html
@@ -44,14 +44,14 @@
         <!-- fin nav, comienzo contenido principal -->
         <div>
         <header>
-            <h1 class="mainTitle">Clinica Freyja</h1>
+            <h1 class="mainTitle">Clínica Freyja</h1>
         </header>
         <main>
             <article class="infoMain"> 
                 <p class="mobilText">Bienvenido a nuestra clínica de obstetricia y ginecología, donde nos esforzamos por brindar atención de la más alta calidad. 
-                En nuestra clínica, entendemos que las mujeres tienen necesidades de atención médica únicas y estamos aquí para brindar atención personalizada que aborde sus inquietudes específicas. Ya sea que busque atención ginecológica de rutina, servicios de planificación familiar o atención prenatal y posparto, estamos comprometidos a brindarle la mejor atención posible.</p>
-                <img src="./img/uterus.webp" alt="doctor representacion utero">
-                <img src="./img/pregnancy.webp" alt="control embarazo">
+                Entendemos que las mujeres tienen necesidades de atención médica únicas y estamos aquí para brindar atención personalizada que aborde sus inquietudes específicas. Ya sea que busque atención ginecológica de rutina, servicios de planificación familiar o atención prenatal y posparto, estamos comprometidos a brindarle la mejor atención posible.</p>
+                <img src="./img/uterus.webp" alt="doctor representacion utero" class="indexPic">
+                <img src="./img/pregnancy.webp" alt="control embarazo" class="indexPic">
                 <p class="mobilText"> Nuestras instalaciones de última generación están diseñadas para crear un ambiente cómodo y acogedor, y nuestro equipo de profesionales está capacitado para brindarle el más alto nivel de atención. 
                 Gracias por considerar nuestra clínica para sus necesidades de atención médica. Esperamos poder servirle y ayudarlo a lograr una salud y un bienestar óptimos.</p>
             </article>
