--- a/pages/404.html
+++ b/pages/404.html
@@ -12,15 +12,13 @@
     <link rel="stylesheet" href="../css/main.css">
 </head>
 <body>
-        <div>
-            <header>
-                <h1 class="mainTitle">404 Error - Page Not Found</h1>
-            </header>
-            <p>Disculpa la molestia, estamos creando algo nuevo para ti</p>
-            <img src="../img/creation.webp" alt="404 Error Image">
-                </div>
-            </section>
-        </main>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
+    <header>
+        <h1 class="mainTitle">Page Not Found</h1>
+    </header>
+    <main class="errorStyle">
+        <p class="mobilText">Disculpa la molestia, estamos creando algo nuevo para ti</p>
+        <a href="../index.html"><img src="../img/newcreation.webp" alt="404 Error Image" class="mobilError"></a>
+        </section>
+    </main>
 </body>
 </html>
