--- a/pages/estetica.html
+++ b/pages/estetica.html
@@ -42,10 +42,10 @@
         <!-- fin nav, comienzo contenido principal -->
         <div>
         <header>
-            <h1 class="mainTitle mainTitlePages">Estetica</h1>
+            <h1 class="mainTitle mainTitlePages">Estética</h1>
         </header>
         <main>
-        <section class="aesCarous caroMobil">
+        <section class="aesCarous">
             <div id="carouselExampleCaptions" class="carousel slide">
                 <div class="carousel-indicators">
                     <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -55,30 +55,30 @@
                     </div>
                     <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img src="../img/acidohialuronico.webp" class="d-block w-100" alt="tratamiento acido hialuronico">
+                        <img src="../img/acidohialuronico.webp" class="d-block w-100 caroImg" alt="tratamiento acido hialuronico">
                         <div class="carousel-caption d-none d-md-block">
-                        <h2>Acido hialuronico</h2>
-                        <p>Tratamiento con acido hialuronico para rellenos $45000</p>
+                        <h2>Ácido hialurónico</h2>
+                        <p>Tratamiento con ácido hialurónico para rellenos $45000</p>
                         </div>
                     </div>
                     <div class="carousel-item">
-                        <img src="../img/dermapen.webp" class="d-block w-100" alt="tratamiento dermapen">
+                        <img src="../img/dermapen.webp" class="d-block w-100 caroImg" alt="tratamiento dermapen">
                         <div class="carousel-caption d-none d-md-block">
                         <h2>Dermapen</h2>
                         <p>$7500</p>
                         </div>
                     </div>
                     <div class="carousel-item">
-                        <img src="../img/fostatidilcolina.webp" class="d-block w-100" alt="tratamiento fosfatidilcolina">
+                        <img src="../img/fostatidilcolina.webp" class="d-block w-100 caroImg" alt="tratamiento fosfatidilcolina">
                         <div class="carousel-caption d-none d-md-block">
                         <h2>Fosftifilcolina</h2>
                         <p>Para adiposidad localizada $8000</p>
                         </div>
                     </div>
                     <div class="carousel-item">
-                        <img src="../img/peelingquimico.webp" class="d-block w-100" alt="tratamiento peeling quimico">
+                        <img src="../img/peelingquimico.webp" class="d-block w-100 caroImg" alt="tratamiento peeling quimico">
                         <div class="carousel-caption d-none d-md-block">
-                        <h2>Peeling quimico</h2>
+                        <h2>Peeling químico</h2>
                         <p>Mas punta de diamante $4000</p>
                     </div>
                     </div>
@@ -94,21 +94,21 @@
             </div>
         </section>
         <section class="aesSettings">
-            <p class="mobilText">Bienvenido a nuestro Departamento Estetica, donde la belleza se encuentra con la ciencia para ayudarlo a verse y sentirse lo mejor posible. Nuestro equipo de profesionales experimentados se dedica a brindar lo último en tratamientos estéticos y tecnologías para ayudarlo a alcanzar sus objetivos de belleza.
-            Nuestra gama de servicios incluye todo, desde tratamientos para el cuidado de la piel y faciales hasta contorno corporal y procedimientos cosméticos. Nuestro equipo de expertos trabajará con usted para crear un plan de tratamiento personalizado que aborde sus necesidades e inquietudes únicas.
-            Entendemos que la decisión de someterse a un tratamiento estético puede ser personal y estamos comprometidos a brindarle el más alto nivel de cuidado y atención. Nuestro objetivo es ayudarte a alcanzar tus metas de belleza de una manera segura y efectiva, con resultados que superen tus expectativas.</p>    
+            <p class="mobilText">Bienvenido a nuestro Departamento de Estetica, donde la belleza se encuentra con la ciencia para ayudarlo a verse y sentirse lo mejor posible. Nuestro equipo de profesionales experimentados se dedica a brindar lo último en tratamientos estéticos y tecnologías para ayudarlo a alcanzar sus objetivos de belleza.
+            Nuestra gama de servicios incluye, desde tratamientos para el cuidado de la piel y faciales hasta contorno corporal y procedimientos cosméticos. Nuestro equipo de expertos trabaja con usted para crear un plan de tratamiento personalizado que aborde sus necesidades e inquietudes únicas.
+            Entendemos que la decisión de someterse a un tratamiento estético puede ser personal y estamos comprometidos a brindarle el más alto nivel de cuidado y atención. Nuestro objetivo es ayudarle a alcanzar sus metas de belleza de una manera segura y efectiva, con resultados que superen sus expectativas.</p>    
         </section>
         <section class="cardsMobil">
             <article class="card mb-3 gynService glasStyle" style="max-width: 400px;">
                 <div class="row g-0">
                   <div class="col-md-4">
-                    <img src="../img/acidohialuronico.webp" class="img-fluid rounded-start" alt="tratamiento acido hialuronico">
+                    <img src="../img/acidohialuronico.webp" class="img-fluid rounded-start indexPic" alt="tratamiento acido hialuronico">
                   </div>
                   <div class="col-md-8">
                     <div class="card-body">
                       <h3 class="card-title">Acido hialuronico</h3>
                       <p class="card-text">Tratamiento con acido hialuronico para rellenos $45000</p>
-                      <a href="#" class="btn btn-outline-secondary">Solicitar turno</a>
+                      <a href="../pages/404.html" class="btn btn-outline-secondary">Solicitar turno</a>
                     </div>
                   </div>
                 </div>
@@ -116,13 +116,13 @@
               <article class="card mb-3 gynService glasStyle" style="max-width: 400px;">
                 <div class="row g-0">
                   <div class="col-md-4">
-                    <img src="../img/dermapen.webp" class="img-fluid rounded-start" alt="tratamiento dermapen">
+                    <img src="../img/dermapen.webp" class="img-fluid rounded-start indexPic" alt="tratamiento dermapen">
                   </div>
                   <div class="col-md-8">
                     <div class="card-body">
                       <h3 class="card-title">Dermapen</h3>
                       <p class="card-text">$7500</p>
-                      <a href="#" class="btn btn-outline-secondary">Solicitar turno</a>
+                      <a href="../pages/404.html" class="btn btn-outline-secondary">Solicitar turno</a>
                     </div>
                   </div>
                 </div>
@@ -130,13 +130,13 @@
               <article class="card mb-3 gynService glasStyle" style="max-width: 400px;">
                 <div class="row g-0">
                   <div class="col-md-4">
-                    <img src="../img/fostatidilcolina.webp" class="img-fluid rounded-start" alt="tratamiento fosfatidilcolina">
+                    <img src="../img/fostatidilcolina.webp" class="img-fluid rounded-start indexPic" alt="tratamiento fosfatidilcolina">
                   </div>
                   <div class="col-md-8">
                     <div class="card-body">
                       <h3 class="card-title">Fosfatidilcolina</h3>
                       <p class="card-text">Para adiposidad localizada $8000</p>
-                      <a href="#" class="btn btn-outline-secondary">Solicitar turno</a>
+                      <a href="../pages/404.html" class="btn btn-outline-secondary">Solicitar turno</a>
                     </div>
                   </div>
                 </div>
@@ -144,13 +144,13 @@
               <article class="card mb-3 gynService glasStyle" style="max-width: 400px;">
                 <div class="row g-0">
                   <div class="col-md-4">
-                    <img src="../img/peelingquimico.webp" class="img-fluid rounded-start" alt="tratamiento peeling">
+                    <img src="../img/peelingquimico.webp" class="img-fluid rounded-start indexPic" alt="tratamiento peeling">
                   </div>
                   <div class="col-md-8">
                     <div class="card-body">
                       <h3 class="card-title">Peeling quimico</h3>
                       <p class="card-text">Mas punta de diamante $4000</p>
-                      <a href="#" class="btn btn-outline-secondary">Solicitar turno</a>
+                      <a href="../pages/404.html" class="btn btn-outline-secondary">Solicitar turno</a>
                     </div>
                   </div>
                 </div>
