--- a/pages/obstetricia.html
+++ b/pages/obstetricia.html
@@ -24,10 +24,10 @@
             <div class="collapse navbar-collapse w-100" id="navbarSupportedContent">
                 <ul class="navbar-nav w-100 d-flex flex-md-column text-center text-md-end">
                     <li class="nav-item">
-                        <a class="nav-link" href="../pages/estetica.html">Estetica</a>
+                        <a class="nav-link" href="../pages/estetica.html">Estética</a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link" href="../pages/ginecologia.html">Ginecologia</a>
+                        <a class="nav-link" href="../pages/ginecologia.html">Ginecología</a>
                       </li>
                       <li class="nav-item">
                         <a class="nav-link active" href="../pages/obstetricia.html">Obstetricia</a>
@@ -47,39 +47,35 @@
         <main>
             <section class="obsMain">
                 <img src="../img/DocAlma.webp" alt="foto obstetra Javier Alma" class="obsImg">
-                <p class="obsIntro mobilText">Nuestro equipo de profesionales de la salud experimentados se dedica a brindar una atención excepcional a las futuras madres y sus bebés. Nuestras instalaciones de última generación, tecnología avanzada y enfoque personalizado de atención aseguran que cada embarazo se cumpla con el más alto nivel de atención y experiencia. Estamos comprometidos a apoyarla a usted y a su familia en cada etapa de su embarazo, desde la preconcepción hasta la atención posparto.</p>
+                <p class="obsIntro mobilText">Nuestro equipo de profesionales de la salud experimentados se dedica a brindar una atención excepcional a las futuras madres y a sus bebés. Nuestras instalaciones de última generación, tecnología avanzada y enfoque personalizado de atención aseguran que cada embarazo se cumpla con el más alto nivel de atención y experiencia. Estamos comprometidos a apoyarla a usted y a su familia en cada etapa de su embarazo, desde la preconcepción hasta la atención posparto.</p>
                 <div class="list-group glasStyle">
                     <a class="list-group-item list-group-item-action">
                       <div class="d-flex w-100 justify-content-between">
                         <h2 class="mb-1">Obstetricia de bajo y alto riesgo</h2>
-                        <small>3 days ago</small>
                       </div>
-                      <p class="mb-1">Some placeholder content in a paragraph.</p>
-                      <small>And some small print.</small>
+                      <p class="mb-1"></p>
+                      <small></small>
                     </a>
                     <a class="list-group-item list-group-item-action">
                       <div class="d-flex w-100 justify-content-between">
-                        <h2 class="mb-1">Rehabilitacion de suelo pelvico</h2>
-                        <small class="text-body-secondary">3 days ago</small>
+                        <h2 class="mb-1">Rehabilitación de suelo pélvico</h2>
                       </div>
-                      <p class="mb-1">Some placeholder content in a paragraph.</p>
-                      <small class="text-body-secondary">And some muted small print.</small>
+                      <p class="mb-1"></p>
+                      <small class="text-body-secondary"></small>
                     </a>
                     <a class="list-group-item list-group-item-action">
                       <div class="d-flex w-100 justify-content-between">
-                        <h2 class="mb-1">Curso pre-parto</h2>
-                        <small class="text-body-secondary">3 days ago</small>
+                        <h2 class="mb-1">Cursos preparto</h2>
                       </div>
-                      <p class="mb-1">Some placeholder content in a paragraph.</p>
-                      <small class="text-body-secondary">And some muted small print.</small>
+                      <p class="mb-1"></p>
+                      <small class="text-body-secondary"></small>
                     </a>
                     <a class="list-group-item list-group-item-action">
                         <div class="d-flex w-100 justify-content-between">
-                          <h2 class="mb-1">Post-parto</h2>
-                          <small class="text-body-secondary">3 days ago</small>
+                          <h2 class="mb-1">Puericultura</h2>
                         </div>
-                        <p class="mb-1">Some placeholder content in a paragraph.</p>
-                        <small class="text-body-secondary">And some muted small print.</small>
+                        <p class="mb-1"></p>
+                        <small class="text-body-secondary"></small>
                       </a>
                   </div>
             </section>
